src/index.css
* {
  margin: 0;
  padding: 0;
}

@font-face {
  font-family: 'Articulat.CF-V3';
  src: local('Articulat.CF-V3'), url('./fonts/ArticulatCF/ArticulatCF-Normal.otf') format('opentype');
  /* other formats include: 'woff2', 'truetype, 'opentype',
                            'embedded-opentype', and 'svg' */
}

@font-face {
  font-family: 'Articulat.CF-V3-Bold';
  src: local('Articulat.CF-V3-Bold'), url('./fonts/ArticulatCF/ArticulatCF-DemiBold.otf') format('opentype');
  /* other formats include: 'woff2', 'truetype, 'opentype',
                            'embedded-opentype', and 'svg' */
}

@font-face {
  font-family: 'Articulat.CF-V3-Heavy';
  src: local('Articulat.CF-V3-Bold'), url('./fonts/ArticulatCF/ArticulatCF-Heavy.otf') format('opentype');
  /* other formats include: 'woff2', 'truetype, 'opentype',
                            'embedded-opentype', and 'svg' */
}


body {
  font-family: 'Articulat.CF-V3', Consolas, "Courier New", monospace;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: bottom;
  background-image: url('./image/BAECAFE-background.jpg');
  color: #f0f1f3;

  overflow: hidden;
}

